salesforce-config/objects/Job_List__c/Job_List__c.object-meta.xml
<CustomObject>
    <label>Job List</label>
    <nameField>
        <label>Job List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>