salesforce-config/objects/Job_List__c/fields/deadline__c.field-meta.xml
<CustomField>
    <fullName>deadline__c</fullName>
    <label>deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>