salesforce-config/objects/Job_List__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>