salesforce-config/objects/Job_List__c/fields/job_id__c.field-meta.xml
<CustomField>
    <fullName>job_id__c</fullName>
    <label>job_id</label>
    <type>AutoNumber</type>
</CustomField>