salesforce-config/objects/Job_List__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>